# python-pdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERSONAS.md  QUALITY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: EMOTIONS.md  FACTS.md  LIVE_INTERACTIONS.md  MEMORY.md  PROMPTS.md  SIMULATIONS.md  STYLE_GUIDE.md  TASKS.md  TRAITS.md
examples/: 01_basic_individual.py  02_emotions.py  03_traits.py  04_persona_prompts.py  05_llm_generation.py  06_server.py  07_situations.py  08_masks_and_triggers.py  09_memory.py  10_relationships.py  11_facts.py  12_states.py  13_storage.py  14_simulations.py  15_langchain_integration.py  README.md  demo_rehab.py  run_all_examples.py
src/personaut/: __init__.py  __main__.py  _version.py  cli.py
src/personaut/emotions/: __init__.py  categories.py  emotion.py  state.py
src/personaut/facts/: __init__.py  context.py  extractor.py  fact.py  llm_extractor.py
src/personaut/images/: __init__.py  portrait.py  video.py
src/personaut/individuals/: __init__.py  individual.py  physical.py
src/personaut/interfaces/: __init__.py  file.py  sqlite.py  storage.py
src/personaut/masks/: __init__.py  defaults.py  mask.py
src/personaut/memory/: __init__.py  individual.py  memory.py  private.py  shared.py  sqlite_store.py  vector_store.py
src/personaut/models/: __init__.py  anthropic.py  bedrock.py  embeddings.py  gemini.py  local_embedding.py  model.py  ollama.py  openai.py  registry.py
src/personaut/prompts/: __init__.py  builder.py  manager.py
src/personaut/prompts/components/: __init__.py  emotional_state.py  memory.py  personality.py  relationship.py  situation.py
src/personaut/prompts/templates/: __init__.py  base.py  conversation.py  outcome.py  survey.py
src/personaut/relationships/: __init__.py  network.py  relationship.py  trust.py
src/personaut/server/: __init__.py  server.py
src/personaut/server/api/: __init__.py  app.py  persistence.py  schemas.py
src/personaut/server/api/routes/: __init__.py  emotions.py  individuals.py  masks.py  memories.py  relationships.py  sessions.py  situations.py  triggers.py  websocket.py
src/personaut/server/ui/: __init__.py  app.py
src/personaut/server/ui/static/: .gitignore
src/personaut/server/ui/templates/: base.html  chat_new.html  chat_select.html  chat_session.html  dashboard.html  individual_editor.html  individuals_create.html  individuals_detail.html  individuals_edit.html  individuals_list.html  individuals_not_found.html  relationship_editor.html  relationships_create.html  relationships_detail.html  relationships_edit.html  relationships_list.html  simulations.html  situation_config.html  situations_create.html  situations_detail.html  situations_edit.html  situations_list.html  situations_not_found.html
src/personaut/server/ui/views/: __init__.py  api_helpers.py  chat.py  chat_engine.py  (+6 more)
src/personaut/simulations/: __init__.py  conversation.py  live.py  outcome.py  simulation.py  styles.py  survey.py  types.py
src/personaut/situations/: __init__.py  context.py  situation.py
src/personaut/states/: __init__.py  calculator.py  markov.py  mode.py
src/personaut/traits/: __init__.py  coefficients.py  profile.py  trait.py
src/personaut/triggers/: __init__.py  emotional.py  situational.py  trigger.py
src/personaut/types/: __init__.py  common.py  exceptions.py  individual.py  modality.py
tests/: __init__.py  conftest.py
tests/personaut/: __init__.py  test_package.py
tests/personaut/emotions/: __init__.py  test_categories.py  test_dynamics.py  test_emotion.py  test_state.py
tests/personaut/facts/: test_context.py  test_extractor.py  test_fact.py  test_llm_extractor.py
tests/personaut/images/: test_images.py
tests/personaut/individuals/: __init__.py  test_individual.py  test_physical.py
tests/personaut/interfaces/: __init__.py  test_file.py  test_sqlite.py  test_storage.py
tests/personaut/masks/: __init__.py  test_mask.py
tests/personaut/memory/: __init__.py  test_generate_emotional_state.py  test_individual.py  test_memory.py  test_private.py  test_search.py  test_shared.py  test_sqlite_store.py  test_vector_store.py
tests/personaut/models/: test_embeddings.py  test_generate.py  test_init.py  test_local_embedding.py  test_model.py  test_providers.py  test_registry.py
tests/personaut/prompts/: __init__.py  test_builder.py  test_builder_extended.py  test_manager.py  test_manager_extended.py
tests/personaut/prompts/components/: __init__.py  test_emotional_state.py  test_memory.py  test_personality.py  test_relationship.py  test_situation.py
tests/personaut/prompts/templates/: test_conversation.py  test_outcome.py  test_survey.py
tests/personaut/relationships/: __init__.py  test_network.py  test_relationship.py  test_trust.py
tests/personaut/server/: __init__.py  test_api_app.py  test_api_routes.py  test_persistence.py  test_server.py  test_server_extended.py
tests/personaut/server/api/: __init__.py  test_app.py  test_schemas.py  test_websocket.py
tests/personaut/server/integration/: test_api_integration.py
tests/personaut/server/ui/: __init__.py
tests/personaut/simulations/: __init__.py  conftest.py  test_conversation.py  test_conversation_extended.py  test_live.py  test_outcome.py  test_simulation.py  test_styles.py  test_survey.py  test_types.py
tests/personaut/situations/: __init__.py  test_context.py  test_situation.py
tests/personaut/states/: __init__.py  test_calculator.py  test_markov.py  test_mode.py
tests/personaut/traits/: __init__.py  test_coefficients.py  test_profile.py  test_trait.py
tests/personaut/triggers/: __init__.py  test_emotional.py  test_situational.py
tests/personaut/types/: __init__.py  test_common.py  test_exceptions.py  test_individual.py  test_modality.py
tests_integ/: __init__.py  conftest.py
tests_integ/memory/: __init__.py  test_sqlite_store.py
tests_integ/models/: __init__.py  test_model_bedrock.py  test_model_gemini.py
tests_integ/simulations/: __init__.py  test_conversation.py  test_survey.py
(+21 files in other folders)
